Allow user to change Fabric & Mods Version and integrated an error detector